# hippunfold-fs-ashs-comparison

./: README.md  Snakefile  analysis.ipynb  pyproject.toml
qc_flipbooks/: README.md
resources/: desc-subfields_atlas-magdeburg_dseg.tsv  freesurfer_v21_CA_subfields_dseg.tsv  hippunfold_desc-subfields_atlas-magdeburg_dseg.tsv  subjects_HCA.csv
results/: ashs_volumes.tsv  freesurfer_volumes.tsv  hippunfold-bigbrainatlas_volumes.tsv  hippunfold-freesurferatlas_volumes.tsv  hippunfold-magdeburgatlas_volumes.tsv  hippunfold-t1-bigbrainatlas_volumes.tsv  hippunfold-t1-freesurferatlas_volumes.tsv  hippunfold-t1-magdeburgatlas_volumes.tsv  hippunfold-t2-bigbrainatlas_volumes.tsv  hippunfold-t2-freesurferatlas_volumes.tsv  hippunfold-t2-magdeburgatlas_volumes.tsv
results/ashs/: sub-6086470_volumes.tsv  sub-6117051_volumes.tsv  sub-6166973_volumes.tsv  sub-6276475_volumes.tsv  sub-6291976_volumes.tsv  sub-6317665_volumes.tsv  sub-6363167_volumes.tsv  sub-6405157_volumes.tsv  sub-6451366_volumes.tsv  sub-6515366_volumes.tsv  sub-6570677_volumes.tsv  sub-6604264_volumes.tsv  sub-6631671_volumes.tsv  sub-6653277_volumes.tsv  sub-6686191_volumes.tsv  sub-6732374_volumes.tsv  sub-6752784_volumes.tsv  sub-6771081_volumes.tsv  sub-6880490_volumes.tsv  sub-6937998_volumes.tsv  sub-6954998_volumes.tsv  sub-7027863_volumes.tsv  sub-7079074_volumes.tsv  sub-7101546_volumes.tsv  sub-7108358_volumes.tsv  sub-7130957_volumes.tsv  sub-7131454_volumes.tsv  sub-7134056_volumes.tsv  sub-7137567_volumes.tsv  sub-7175272_volumes.tsv  sub-7195884_volumes.tsv  (+69 more)
scripts/: gen_volume_tsv.py
(+792 files in other folders)
