[tool.poetry]
name = "hippunfold-fs-ashs-comparison"
version = "0.1.0"
description = ""
authors = ["Ali Khan <alik@robarts.ca>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.3"
snakemake = "^7.12.1"
jupyterlab = "^3.4.5"
seaborn = "^0.11.2"
nibabel = "^4.0.1"
statsmodels = "^0.13.2"
snakebids = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
